--- a/Concept-Presentation/Gruppe2_Concept.tex
+++ b/Concept-Presentation/Gruppe2_Concept.tex
@@ -170,7 +170,10 @@
 		
 		\subsubsection{Interface}
 		
-		TODO
+		Das Interface wurde mit Hilfe von Box2D umgesetzt. Wir nutzen dabei die enthaltenen Button- und Tabellen-Funktionen. Das Startmenü als auch die Charakterauswahl wurden dabei möglichst simpel gehalten.\\
+		Während des Spiels ist das Interface ein Overlay über dem eigentlichen Spielgeschehen. Angriffs-Buttons, eine Toolbar um das Menü zu öffnen und Informations-Overlays zu HP und Schlüsselanzahl sind an den Rändern des Bildschirms platziert. So hat dier Spieler alle wichtigen Informationen auf einen Blick ohne dabei zu sehr von eigentlichem Spielgeschehen abgelenkt zu werden.\\
+		Das geöffnete Inventar befindet sich mittig und verdeckt den Großteil des Bildes, es ist jedoch auch so möglich sich weiter zu bewegen und alle anderen Buttons zu erreichen. Das Inventar selbst besteht aus weiteren Buttons. Im oberen Bereich kann man zwischen zwei Waffen (der Faust und der Klassen-spezifischen Waffe) wählen. Im Zentrum befinden sich Heiltränke, die durch einfaches anklicken eingesetzt werden können. unten rechts ist ein Button über den die Mini-Map geöffnet werden kann.\\
+		Außerdem bleibt am rechten Rand des Bildschirms die Toolbar erhalten um das Inventar wieder einzuklappen.\\
 
 	\section{Offene Punkte}
 		\subsubsection{Scissor Stack}
